# thokr

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: build.yml  deploy.yml  docker.yml
docs/: usage-guide.md
src/: layout.rs  main.rs  math.rs  session.rs  thok.rs  ui.rs  util.rs  wiki.rs
src/lang/: english.json  english10k.json  english1k.json  mod.rs
src/ui/: prompt.rs
