[package]
name = "thokr"
description = "a sleek typing tui written in rust"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/coloradocolby/thokr.git"
homepage = "https://github.com/coloradocolby/thokr"
license = "MIT"
authors = ["Colby Thomas <coloradocolby@gmail.com>"]
edition = "2021"
exclude = ["assets/*", ".github", "*.log", "Dockerfile"]
keywords = ["tui", "terminal", "typing"]

[dependencies]
tui = { version = "0.17", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.1", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
itertools = "0.10.3"
unicode-width = "0.1.9"
webbrowser = "0.6.0"
crossterm = "0.23.2"
strum_macros = "0.24.0"
include_dir = "0.7.2"
