[package]
name = "thokr"
description = "sleek typing tui with visualized results and historical logging"
version = "0.4.1"
readme = "README.md"
repository = "https://github.com/thatvegandev/thokr.git"
homepage = "https://github.com/thatvegandev/thokr"
license = "MIT"
authors = ["Colby Thomas <thatvegandev@gmail.com>"]
edition = "2021"
exclude = [".github", "*.log", "Dockerfile"]
keywords = ["tui", "terminal", "typing"]

[dependencies]
tui = { version = "0.17", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.1", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
itertools = "0.10.3"
unicode-width = "0.1.9"
webbrowser = "0.7.1"
crossterm = "0.23.2"
strum_macros = "0.24.0"
include_dir = "0.7.2"
directories = "4.0"
chrono = "0.4"
cgisf_lib = "0.1.3"
unicode-segmentation = "1.10.0"
